--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" /></a>
-							<h2>Magna feugiat lorem</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/01.jpg" class="image"><img src="images/fulls/01.jpg" alt="" /></a>
+							<h2>PLEASE WORK please work</h2>
+							<p>Wouldn't it be nice if we were older? \ Then we wouldn't have to wait so long \ And wouldn't it be nice to live together </p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
