--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="https://raw.githubusercontent.com/kateberg/kateberg.github.io/master/images/fulls/01.jpg" class="image"><img src="https://raw.githubusercontent.com/kateberg/kateberg.github.io/master/images/thumbs/01.jpg" alt="" /></a>
+							<a href="kateberg.github.io/images/fulls/01.png" class="image"><img src="kateberg.github.io/images/fulls/01.png" alt="" /></a>
 							<h2>pls work</h2>
 							<p>wouldn't it be nice if we were older.</p>
 						</article>
