Behance Link Update

--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
             <p>
 				<a href="#about"><i class="icon-user"></i><span><b> Kate N. Keeley</b></span></a>
                 <br><a href="#top" class="cd-top">Back to Top</a> | <a href="https://www.linkedin.com/in/katenk/" target="_blank" class="fa fa-linkedin"></a> |  		
-							<a href="https://twitter.com/pokateo_" target="_blank" class="fa fa-twitter"></a> | <a href="https://www.behance.net/knkeeley6a41" target="_blank" class="fa fa-behance"></a>
+							<a href="https://twitter.com/pokateo_" target="_blank" class="fa fa-twitter"></a> | <a href="www.behance.net/kateberg" target="_blank" class="fa fa-behance"></a>
             </p>
         </footer>
     </div><!-- #main -->
