--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                                     <h5>
                                         The Donald M. Matthews Award, Excellence in Forestry Award
                                     </h5>
-									<br><br><b>School of Natural Resources and Environment, University of Michigan</b>
+									<br><br><br><b>School of Natural Resources and Environment, University of Michigan</b>
                                     <p>Established in 1948 from a fund set up by alumni and faculty of the school, this award honors the memory of Professor Donald M. Matthews, who taught in the field of forest stewardship. The award is given to the most promising student in this field.</p>
                                 </li>
 								<li>
@@ -620,18 +620,7 @@
 							</div>
                         <div class="g1">
                             <div class="sidebar">
-								<h3>
-                                    Memberships
-                                </h3>
-								September 2017 - Present
-								<h5>
-                                    <a href="http://www.imagin.org/about_imagin
-" target="_blank">IMAGIN: Improving Michigan's Access to Geographic Information Networks</a>
-                                </h5>
-								October 2016 - Present
-								<h5>
-                                    <a href="https://www.eforester.org/main" target="_blank">Society of American Foresters</a>
-                                </h5>
+								
                                 <h3>
                                     Skills
                                 </h3>
@@ -660,6 +649,9 @@
                                 <div class="meter carrot">
                                     <span style="width: 60%"><span>Adobe InDesign</span></span>
                                 </div>
+								<div class="meter carrot">
+                                    <span style="width: 55%"><span>Adobe Dreamweaver</span></span>
+                                </div>
                                 <div class="meter wisteria">
                                     <span style="width: 98%"><span>Microsoft Office PowerPoint</span></span>
                                 </div>
@@ -673,7 +665,7 @@
                                     <span style="width: 70%"><span>Microsoft Office Access</span></span>
                                 </div>
 								<div class="meter wisteria">
-                                    <span style="width: 75%"><span>Microsoft Office Publisher</span></span>
+                                    <span style="width: 80%"><span>Microsoft Office Publisher</span></span>
                                 </div>
                                 <div class="break"></div>
                                 <h5>
@@ -691,7 +683,18 @@
                                 <div class="meter sunflower">
                                     <span style="width: 30%"><span>LaTex</span></span>
                                 </div>
-								
+							<h3>
+                                    Memberships
+                                </h3>
+								September 2017 - Present
+								<h5>
+                                    <a href="http://www.imagin.org/about_imagin
+" target="_blank">IMAGIN: Improving Michigan's Access to Geographic Information Networks</a>
+                                </h5>
+								October 2016 - Present
+								<h5>
+                                    <a href="https://www.eforester.org/main" target="_blank">Society of American Foresters</a>
+                                </h5>
                             </div>
                         </div>
                     </section>
