--- a/index.html
+++ b/index.html
@@ -486,8 +486,8 @@
                 <div id="portfolio">
                     <section class="clearfix">
 						
-						<!-- Embed Wordpress -->
-						<!-- <iframe width="100%" height="1000px" src="http://www.katenberg.wordpress.com" frameborder="0" scrolling="yes"></iframe> -->
+						<!-- Embed StoryMap -->
+						<iframe width="100%" height="800px" src="http://www.arcgis.com/apps/MapSeries/index.html?appid=9140e66da35e45ee90f571f03cdd760d" frameborder="0" scrolling="yes"></iframe>
 						
 						<!-- Well-Being -->
 						<div class="g1">
