--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 						
 						<!-- Embed StoryMap -->
 						<iframe width="100%" height="800px" src="http://www.arcgis.com/apps/MapSeries/index.html?appid=9140e66da35e45ee90f571f03cdd760d" frameborder="0" scrolling="yes"></iframe>
-						
+						<h5><a href="bit.do/KatePortfolio"View portfolio in new tab.</a></h5>
 						<!-- Well-Being -->
 						<!-- <div class="g1"> -->
                             <!-- <div class="image"> -->
