--- a/portfolio/hydro.html
+++ b/portfolio/hydro.html
@@ -33,7 +33,7 @@
 <!-- Navigation -->
 	<div class="container-fluid"> 
         <header class="box-header">
-			<span><img src="..\headportfolio.png" style="width:200px;height:100px;"></span>
+			<span><img src="..\img\headportfolio.png" style="width:200px;height:100px;"></span>
 			<a class="box-primary-nav-trigger" href="#0">
                 <span class="box-menu-text">Menu</span><span class="box-menu-icon"></span>
             </a>
