--- a/portfolio/annarbortrees.html
+++ b/portfolio/annarbortrees.html
@@ -111,7 +111,7 @@
 	
 	<!-- main-container -->
 	<div class="container main-container">
-        <a href="../img/Full/trees.png" target="_blank"><img src="../img/Full/trees.png" width="1100px"/></a>
+        <a href="../img/Full/trees.png" target="_blank"><img src="../img/Full/trees.PNG" width="1100px"/></a>
 		<div class="col-md-9">
             <h3>As a GIS Instructor, I developed labs, midterms, and final exams. This particular map was the key for the final map practical I created for my students in the Fall 2016.<h3>
         <h4>In this scenario I created, my students were GIS Analysts for Ann Arbor’s Natural Area Preservation department. The City of Ann Arbor was working to remove invasive tree species and needed their help identifying priority trees for removal. Priority trees have the following characteristics:</h4>
