--- a/portfolio/direwolf.html
+++ b/portfolio/direwolf.html
@@ -138,9 +138,9 @@
 			<br><br><br>
 			<table>
 				<tr>
-					<th><img src="../img/Direwolf/dire.png" width="400px"/></th>
+					<th><img src="../img/Direwolf/dire.PNG" width="400px"/></th>
 					<th><img src="../img/Direwolf/saber.png" width="400px"/></th>
-					<th><img src="../img/Direwolf/pubdire.png" width="400px"/></a></th>
+					<th><img src="../img/Direwolf/pubdire.PNG" width="400px"/></a></th>
 				</tr>
 				<tr>
 					<th><a href="../img/Direwolf/direwolf.pdf" target="_blank">Poster presentation at the 2015 UCLA Biology Symposium</a></th>
