--- a/portfolio/marmots.html
+++ b/portfolio/marmots.html
@@ -114,7 +114,7 @@
        		<div class="col-md-12">
 			<h3><b>Adviser:</b> Dr. Daniel T. Blumstein</h3><h4><i>Department of Ecology & Evolutionary Biology and UCLA Institute of Environment & Sustainability</i></h4><br>
 			<h4><a href="https://www.researchgate.net/publication/286639525_Fitness_and_hormonal_correlates_of_social_and_ecological_stressors_of_female_yellow-bellied_marmots" target="_blank">Publication: Social stressors & reproductive success in yellow-bellied marmots</a></h4>
-			<br><a href="../img/Research/marmots.png" target="_blank"><img src="../img/Research/marmots.png" width="1000px" alt="image"/></a>
+			<br><a href="../img/Research/marmots.PNG" target="_blank"><img src="../img/Research/marmots.PNG" width="1100px"/></a>
     </div></div>
     <!-- end main-container -->
 
