--- a/portfolio/mp.html
+++ b/portfolio/mp.html
@@ -125,7 +125,7 @@
 				</tr>
 				<tr>
 					<th><img src="../img/Research/MP_report2.png" width="400px"/></th>
-					<th><img src="../img/Research/MP_storymap2.png" width="400px"/></th>
+					<th><img src="../img/Research/MP_storymap2.PNG" width="400px"/></th>
 					<th><img src="../img/Research/MP_present.jpg" width="400px"/></a></th>
 					
 				</tr>
@@ -139,8 +139,8 @@
 					<th><a href="https://www.sciencebase.gov/catalog/item/590c8840e4b0e541a038e2db" target="_blank">Visit Website</a></th>
 				</tr>
 				<tr>
-					<th><img src="../img/Research/MP_poster.png" width="400px"/></th>
-					<th><img src="../img/Research/MP_lcc.png" width="400px"/></th>
+					<th><img src="../img/Research/MP_poster.PNG" width="400px"/></th>
+					<th><img src="../img/Research/MP_lcc.PNG" width="400px"/></th>
 					<th><img src="../img/Research/MP_usgs3.png" width="400px"/></a></th>
 				</tr>
 			</table>
