--- a/portfolio/picturethis.html
+++ b/portfolio/picturethis.html
@@ -133,33 +133,37 @@
 					<li data-target="#myCarousel" data-slide-to="2"></li>
 					<li data-target="#myCarousel" data-slide-to="3"></li>
 					<li data-target="#myCarousel" data-slide-to="4"></li>
+					<li data-target="#myCarousel" data-slide-to="5"></li>
+					<li data-target="#myCarousel" data-slide-to="6"></li>
+					<li data-target="#myCarousel" data-slide-to="7"></li>
+					<li data-target="#myCarousel" data-slide-to="8"></li>
 				  </ol>
 
 				  <!-- Wrapper for slides -->
 				  <div class="carousel-inner">
 					<div class="item active">
-					  <img src="../img/PictureThis/PT_BrightonHome.png">
+					  <img src="../img/PictureThis/PT_BrightonHome.PNG">
 					</div>
 					<div class="item">
-					  <img src="../img/PictureThis/PT_BrightonMap.png">
+					  <img src="../img/PictureThis/PT_BrightonMap.PNG">
 					</div>
 					<div class="item">
-					  <img src="../img/PictureThis/PT_BrightonMapZoom.png">
+					  <img src="../img/PictureThis/PT_BrightonMapZoom.PNG">
 					</div>
 					<div class="item">
-					  <img src="../img/PictureThis/PT_BrightonEntry.png">
+					  <img src="../img/PictureThis/PT_BrightonEntry.PNG">
 					</div>
 					<div class="item">
-					  <img src="../img/PictureThis/PT_BrightonSubmit.png">
+					  <img src="../img/PictureThis/PT_BrightonSubmit.PNG">
 					</div>
 					<div class="item">
-					  <img src="../img/PictureThis/PT_BrightonSocialMedia.png">
+					  <img src="../img/PictureThis/PT_BrightonSocialMedia.PNG">
 					</div>
 					<div class="item">
-					  <img src="../img/PictureThis/PT_BrightonWebsite.png">
+					  <img src="../img/PictureThis/PT_BrightonWebsite.PNG">
 					</div>
 					<div class="item">
-					  <img src="../img/PictureThis/PT_BrightonRadio.png">
+					  <img src="../img/PictureThis/PT_BrightonRadio.PNG">
 					</div>
 					<div class="item">
 					  <img src="../img/PictureThis/brightonfb4.PNG">
