--- a/portfolio/pronghorn.html
+++ b/portfolio/pronghorn.html
@@ -127,7 +127,7 @@
         </div>
 		
 		<div class="col-md-12">
-			<a href="../img/Full/antelope.png" target="_blank"><img src="../img/Full/antelope.png" width="1100px"/></a>
+			<a href="../img/Full/antelope.png" target="_blank"><img src="../img/Full/antelope.PNG" width="1100px"/></a>
 			<br><br><h4>To create this map, the following layers were used:</h4>
 			<ul><li>Sublette and Teton, WY county boundaries (polygon layer)</li>
 				<li>DEM of both counties (raster layer)</li>
