--- a/resume.html
+++ b/resume.html
@@ -66,7 +66,7 @@
 	<!-- Navigation -->
 	<div class="container-fluid"> 
         <header class="box-header">
-			<span><img src="img\headresume.png" style="width:200px;height:100px;"></span>
+			<span><img src="..\img\headportfolio.png" style="width:200px;height:100px;"></span>
 			<a class="box-primary-nav-trigger" href="#0">
                 <span class="box-menu-text">Menu</span><span class="box-menu-icon"></span>
             </a>
@@ -78,12 +78,54 @@
 						<li class="box-social"><a href="https://www.linkedin.com/in/katenk/" target="_blank"><i class="ion-social-linkedin" target="_blank"></i></a></li>
 						<li class="box-social"><a href="https://twitter.com/pokateo_" target="_blank"><i class="ion-social-twitter" target="_blank"></i></a></li>
 					<li class="box-label">Kate Keeley</li>
-					<li><a href="index.html../index.html">Portfolio </a></li>
-					<li><a href="resume.html">Resume </a><i class="ion-ios-circle-filled color"></i></li>
+					<li><a href="../resume.html">Resume </a><i class="ion-ios-circle-filled color"></i></li>
+					<li><a href="../index.html#portfolio">Portfolio</a></li>
+					<table align="center">
+						<tr>
+							<th><li style="font-size:90%;"><a href="../portfolio/birds.html">A Bird's Eye View Map </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/cheboygan.html">Cheboygan River Watershed Map </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/lathrup.html">Clearzoning! </a></li></th>
+						</tr>
+						<tr>
+							<th><li style="font-size:90%;"><a href="../portfolio/commute.html">Communting Country </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/cad.html">Computer-Aided Design </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/johnsnow.html">Disease & Analyses </a></li></th>
+						</tr>
+						<tr>
+							<th><li style="font-size:90%;"><a href="../portfolio/FMBQ.html">Field & Marine Biology Quarter </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/glansis.html">GLANSIS Mapping </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/heart.html">Home is Where the Heart is </a></li></th>
+						</tr>
+						<tr>
+							<th><li style="font-size:90%;"><a href="../portfolio/direwolf.html">Injury Heat Mapping </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/pumpkins.html">Largest Harvests Map </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/marmots.html">Marmots Stress</a></li></th>
+						</tr>
+						<tr>
+							<th><li style="font-size:90%;"><a href="../portfolio/mp.html">Master's Project </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/hydro.html">Michigan Hydrology Map </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/overwatch.html">Overwatch League Regions Map </a></li></th>
+						<tr>
+						<tr>
+							<th><li style="font-size:90%;"><a href="../portfolio/picturethis.html">Picture This </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/annarbortrees.html">Priority Tree Removal </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/pronghorn.html">Pronghorn Least Cost Analysis </a></li></th>
+						</tr>
+						<tr>
+							<th><li style="font-size:90%;"><a href="../portfolio/toolbox.html">Species Reintroduction Toolbox </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/wellbeing.html">State of American Wellbeing Map </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/nwf.html">Urban Wildlife Week </a></li></th>
+						</tr>
+						<tr>							
+							<th><li style="font-size:90%;"><a href="../portfolio/whatisGIS.html">What is GIS? </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/wildthings.html">Where the Wild Things Are Map  </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/lakes.html">World's Largest Lakes </a></li></th>
+						</tr>
+					</table>
 				</ul>
 			</nav>
     </div>
-	<!-- end Navigation --> 
+	<!-- end Navigation -->
 	
 	
 
