--- a/portfolio/toolbox.html
+++ b/portfolio/toolbox.html
@@ -125,20 +125,18 @@
 					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 					<li data-target="#myCarousel" data-slide-to="1"></li>
 					<li data-target="#myCarousel" data-slide-to="2"></li>
-					<li data-target="#myCarousel" data-slide-to="3"></li>
-					<li data-target="#myCarousel" data-slide-to="4"></li>
 				  </ol>
 
 				  <!-- Wrapper for slides -->
 				  <div class="carousel-inner">
 					<div class="item active">
-					  <img src="../img/toolbox/toolbox1.png">
+					  <img src="../img/toolbox/toolbox1.PNG">
 					</div>
 					<div class="item">
-					  <img src="../img/toolbox/toolbox2.png">
+					  <img src="../img/toolbox/toolbox2.PNG">
 					</div>
 					<div class="item">
-					  <img src="../img/toolbox/toolbox3.png">
+					  <img src="../img/toolbox/toolbox3.PNG">
 					</div>
 				  </div>
 
