--- a/portfolio/toolbox.html
+++ b/portfolio/toolbox.html
@@ -130,13 +130,13 @@
 				  <!-- Wrapper for slides -->
 				  <div class="carousel-inner">
 					<div class="item active">
-					  <img src="../img/toolbox/toolbox1.PNG">
+					  <img src="../img/Toolbox/toolbox1.PNG">
 					</div>
 					<div class="item">
-					  <img src="../img/toolbox/toolbox2.PNG">
+					  <img src="../img/Toolbox/toolbox2.PNG">
 					</div>
 					<div class="item">
-					  <img src="../img/toolbox/toolbox3.PNG">
+					  <img src="../img/Toolbox/toolbox3.PNG">
 					</div>
 				  </div>
 
