--- a/resume.html
+++ b/resume.html
@@ -132,14 +132,11 @@
 	<!-- Introduction -->
 	<section id="about" class="about-section section-padding">
 		<div class="container">
-			
 			<h2 class="section-title wow fadeInUp">Kate Keeley</h2> 
 			<div class="row">
 				<div class="col-md-4 col-md-push-8">
 					<div class="biography">
-					  <!-- <div class="myphoto"> -->
 						<img src="img/head.jpg" alt="">
-					  <!-- </div> -->
 					 </div>
 				</div>
 
@@ -151,33 +148,29 @@
 						  <p>Please stroll through my website to learn more...</p>
 							  <ul class="list-check">
 								<li>Cartography</li>
-									<li>Science Communication</li>
-									<li>Web Mapping</li>
-									<li>Environmental Education</li>
+								<li>Science Communication</li>
+								<li>Web Mapping</li>
+								<li>Environmental Education</li>
 								<li>Information Systems</li>
-									<li>Natural Resources Management</li>
+								<li>Natural Resources Management</li>
 								<li>Graphic Design</li>
-									<li>Conservation Biolgy</li>
-								 <li>Spatial Analyses</li>
-									<li>Program Development and Evaluation</li>
-								 
+								<li>Conservation Biolgy</li>
+								<li>Spatial Analyses</li>
+								<li>Program Development and Evaluation</li>
 							  </ul>
 					</div>
-
-					<!-- <div class="my-signature"> -->
-					   <!-- <img src="assets/images/sign.png" alt=""> -->
-					<!-- </div> -->
-
-					<!-- <div class="download-button"> -->
-					  <!-- <a class="btn btn-info btn-lg" href="#contact"><i class="fa fa-paper-plane"></i>Contact Me</a> -->
-					  <!-- <a class="btn btn-primary btn-lg" href="#"><i class="fa fa-download"></i>download my resume</a> -->
-					<!-- </div> -->
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-2 col-md-push-0">
+					<img src="img/esricert.png">
+				</div>
+				<div class="col-md-5 col-md-push-0">
+					<h4>View Resume Section:<br><a href="#edu">Education</a><br><a href="#exp">Experience</a><br><a href="#skills">Skills</a><br><a href="#cert">Honors and Certificates</a></h4><br><br>
 				</div>
 			</div>
 		</div>
 	</section>
-	
-	<h4 align="center">View Section: <a href="#edu">Education</a> | <a href="#exp">Experience</a> | <a href="#skills">Skills</a> | <a href="#cert">Honors and Certificates</a></h4><br><br>
 
     <!-- Resume Section -->
     <section id="resume" class="resume-section section-padding">
@@ -189,7 +182,7 @@
 				<div class="col-md-5 col-md-push-7">
 				<br><h4>Some Coursework</h4>
 					<b>TECHNICAL</b><br>
-						Graphic Design, Advanced GIS, Cartography, Satellite Remote Sensing and Digital Image Processing, Remote Sensing and GIS, Introduction to Python Programming for Environmental Informatics, GIS Programming and Development, Seminar on CAD<br>
+						Graphic Design, Advanced GIS, Cartography, Satellite Remote Sensing and Digital Image Processing, Remote Sensing and GIS, Introduction to Python Programming for Environmental Informatics, <a href="../portfolio/toolbox.html" target="_blank">GIS Programming and Development</a>, <a href="../portfolio/cad.html" target="_blank">Seminar on CAD</a><br>
 					<br><b>EDUCATION & POLICY</b><br>
 						Behavior and Environment, Environmental Psychology for Public Policy, Natural Resources Law, Decision-Making Science and Theory, Environmental Governance, Environmental Policy and Politics, Natural Resource Conflict Management, Leading Non-Profit Organizations<br>
 					<br><b>SCIENCE</b><br>
@@ -205,7 +198,7 @@
 										<h5>Natural Resources & Environment | University of Michigan</h5><p><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://seas.umich.edu/academics/ms/bec" target="_blank">Behavior, Education, and Communication</a> and <a href="http://seas.umich.edu/academics/ms/epp" target="_blank">Environmental Policy and Planning</a></i></p>
 								</div>
 								<div>
-									<p><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Master's Project | </b> <a href="https://deepblue.lib.umich.edu/handle/2027.42/136554">Supporting conservation and decision-making in the Northwoods: Mapping forest values, services, and threats</a>
+									<p><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Master's Project | </b> <a href="../portfolio/mp.html">Supporting conservation and decision-making in the Northwoods: Mapping forest values, services, and threats</a>
 								</div>
 										
 							</div>
@@ -241,9 +234,9 @@
 
 												<div class="timeline-body">
 												<ul class="cat-ul">
-													<li><i class="ion-ios-circle-filled"></i>Strengthening the Geographic Information Systems (GIS) program through weekly blog posts, redesigning website content, and promoting GIS to clients through the development and presentation of marketing materials using ESRI Story Maps, Microsoft Products, and Adobe Products</li>
+													<li><i class="ion-ios-circle-filled"></i>Strengthening the Geographic Information Systems (GIS) program through <a href="http://www.giffelswebster.com/urban-planning-and-your-mappy-halloween/" target="_blank">weekly blog posts</a>, redesigning website content, and promoting GIS to clients through the development and presentation of marketing materials using <a href="../portfolio/whatisGIS.html" target="_blank">ESRI Story Maps</a>, Microsoft Products, and Adobe Products</li>
 													<li><i class="ion-ios-circle-filled"></i> Creating high quality print and interactive web maps and apps, as well as performing GIS data maintenance, manipulation, and analysis</li>
-													<li><i class="ion-ios-circle-filled"></i>Developing GIS citizen engagement options by researching, organizing, and creating interactive web applications to encourage public participation</li>
+													<li><i class="ion-ios-circle-filled"></i>Developing GIS citizen engagement options by researching, organizing, and creating interactive web applications to encourage public participation (e.g. <a href="../portfolio/lathrup.html" target="_blank">Clearzoning!</a> and <a href="../portfolio/picturethis.html" target="_blank">Picture This</a>)</li>
 												</ul>
 												</div><!-- /timeline-body -->
 											</div> <!-- /timeline-content -->
@@ -287,7 +280,7 @@
 												<div class="timeline-body">
 													<ul class="cat-ul">
 														<li><i class="ion-ios-circle-filled"></i>Instructor for three courses: ENV 463: GIS for Conservation and Management (Winter 2016 and 2017) and ENV 309: GIS Explorations (Fall 2016)</li>
-														<li><i class="ion-ios-circle-filled"></i>Responsible for the research, design, and development of some class curriculum, materials, and tests</li>
+														<li><i class="ion-ios-circle-filled"></i>Responsible for the research, design, and development of some class <a href="../portfolio/cheboygan.html" target="_blank">curriculum</a>, <a href="../portfolio/pronghorn.html" target="_blank">materials</a>, and <a href="../portfolio/annarbortrees.html" target="_blank">tests</a></li>
 														<li><i class="ion-ios-circle-filled"></i>Presented lectures, graded assignments, hosted office hours, and demonstrated excellence in teaching by receiving student nominated ”Outstanding Graduate Student Instructor Award”</li>
 														<li><i class="ion-ios-circle-filled"></i>Presented lectures and assignments that range from basic cartography and geoprocessing skills for raster and vector data, to more advanced subjects including suitability analyses, least cost path analyses, Python automation, georeferencing, digitizing</li>
 													</ul>
@@ -308,7 +301,7 @@
 												</div><!-- /timeline-heading -->
 
 												<div class="timeline-body">
-												<p>Non-profit experience at a new branch of the largest nonprofit conservation education organization in the country. Developed the California chapter’s education and outreach program through multiple projects:</p>
+												<p>Non-profit experience at a new branch of the largest nonprofit conservation education organization in the country. Developed the California chapter’s education and outreach program through <a href="../portfolio/nwf.html" target="_blank">multiple projects</a>:</p>
 												   <ul class="cat-ul">
 														<li><i class="ion-ios-circle-filled"></i>Responsible for public outreach by representing the organization at several major nature and citizen science events, writing blog posts, maintaining social media campaigns, and creating educational materials</li>
 														<li><i class="ion-ios-circle-filled"></i>Supported the Urban Wildlife Co-Existence Initiative with the creation of a clearinghouse of resources about living with wildlife, used to support public engagement and evaluate initiative directions</li>
@@ -333,7 +326,7 @@
 												<div class="timeline-body">
 													<ul class="cat-ul">
 														<li><i class="ion-ios-circle-filled"></i>Assisted with the development, implementation, and evaluation of a life science curriculum unit on climate change in local middle schools</li>
-														<li><i class="ion-ios-circle-filled"></i>Web-manager of My Environmental Education Evaluation Resource Assistant (MEERA), a website dedicated to supporting educators with one of the largest collections of environmental program evaluation resources</li>
+														<li><i class="ion-ios-circle-filled"></i>Web-manager of <a href="http://meera.snre.umich.edu/" target="_blank">My Environmental Education Evaluation Resource Assistant (MEERA)</a>, a website dedicated to supporting educators with one of the largest collections of environmental program evaluation resources</li>
 													</ul>
 												</div><!-- /timeline-body -->
 											</div> <!-- /timeline-content -->
@@ -577,7 +570,7 @@
                                         <div class="timeline-heading">
                                             <h4><font color="#186464">Dean's Prize Honoring Outstanding Undergraduate Researchers</font></h4>
                                             <br><h6>University of California, Los Angeles</h6>
-											<p>Given to select students that exemplify excellence in the sciences at UCLA's Science Poster Day.
+											<p>Given to select students that exemplify excellence in the sciences at <a href="../portfolio/marmots.html" target="_blank">UCLA's Science Poster Day</a>.
 											</p>
                                         </div>
 									</div>
