Name, Link Updates

--- a/old/about.html
+++ b/old/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Kate Keeley Resume</title>
+    <title>Kate Berg Resume</title>
     <link rel="icon" href="img/fav.png" type="image/x-icon">
 
     <!-- Bootstrap -->
@@ -93,7 +93,7 @@
         <!-- nav -->
         <nav>
             <ul class="box-primary-nav">
-                <li class="box-label">Kate Keeley</li>
+                <li class="box-label">Kate Berg</li>
 
                 <li><a href="index.html">Portfolio</a> <i class="ion-ios-circle-filled color"></i></li>
                 <li><a href="about.html">Resume</a></li>
@@ -101,8 +101,8 @@
                 <li class="box-label">Follow me</li>
 
                 <li class="box-social"><a href="https://twitter.com/pokateo_"><i class="ion-social-twitter"></i></a></li>
-                <li class="box-social"><a href="https://www.linkedin.com/in/katenk/"><i class="ion-social-linkedin"></i></a></li>
-				<li class="box-social"><a href="mailto:knkeeley@gmail.com"><i class="ion-social-email"></i></a></li>
+                <li class="box-social"><a href="www.linkedin.com/in/katekeeleyberg"><i class="ion-social-linkedin"></i></a></li>
+				<li class="box-social"><a href="mailto:kateberg00@gmail.com"><i class="ion-social-email"></i></a></li>
             </ul>
         </nav>
         <!-- end nav -->  
@@ -126,13 +126,13 @@
                 <img src="img/head.jpg" alt="">
               </div>
               <ul>
-                <li><strong>Name:</strong> Kate Keeley</li>
+                <li><strong>Name:</strong> Kate Berg</li>
                 <li><strong>Date of birth:</strong> 05 Dec 1993</li> 
                 <li><strong>Address:</strong> 239/2 Awesome Street, USA</li> 
                 <li><strong>Nationality:</strong> American</li> 
                 <li><strong>Phone:</strong> (000) 1234 56789</li> 
-                <li><strong>Email:</strong> knkeeley@gmail.com</li>
-				<li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/katenk/">katenk</a></li> 
+                <li><strong>Email:</strong> kateberg00@gmail.com</li>
+				<li><strong>LinkedIn:</strong> <a href="www.linkedin.com/in/katekeeleyberg">katenk</a></li> 
               </ul> 
             </div>
           </div> col-md-4 
