--- a/old/research.html
+++ b/old/research.html
@@ -118,7 +118,7 @@
 							<!-- poster -->
 							<div class="col-md-4 service-box">
 									<img src="img/MP_poster.PNG" width="300px" height="300px" alt="">
-									<a href="https://www.slideshare.net/KateKeeley2/safposterfinal?ref=https://www.linkedin.com/in/katenk/detail/treasury/education:332019914/?entityUrn=urn%3Ali%3Afs_treasuryMedia%3A(ACoAABzc27kBobnPLXgP1m22hEKZNiK70Spv2SM%2C1479347485661)" target="_blank" class="btn">View Poster</a>
+									<a href="https://www.slideshare.net/KateKeeley2/safposterfinal?ref=www.linkedin.com/in/katekeeleybergdetail/treasury/education:332019914/?entityUrn=urn%3Ali%3Afs_treasuryMedia%3A(ACoAABzc27kBobnPLXgP1m22hEKZNiK70Spv2SM%2C1479347485661)" target="_blank" class="btn">View Poster</a>
 							</div>
 							<!-- poster end -->
 							
@@ -162,7 +162,7 @@
 							<!-- poster -->
 							<div class="col-md-4 service-box">
 								<img src="img/dire.PNG" width="300px" height="300px" alt="">
-								<a href="https://www.slideshare.net/KateKeeley2/scienceposterday2015kkeeleydirewolfv6-58799741?ref=https://www.linkedin.com/in/katenk/detail/treasury/position:777466870/?entityUrn=urn%3Ali%3Afs_treasuryMedia%3A(ACoAABzc27kBobnPLXgP1m22hEKZNiK70Spv2SM%2C51072650)" target="_blank" class="btn">View Poster Presented at UCLA Biology Research Symposium</a>
+								<a href="https://www.slideshare.net/KateKeeley2/scienceposterday2015kkeeleydirewolfv6-58799741?ref=www.linkedin.com/in/katekeeleybergdetail/treasury/position:777466870/?entityUrn=urn%3Ali%3Afs_treasuryMedia%3A(ACoAABzc27kBobnPLXgP1m22hEKZNiK70Spv2SM%2C51072650)" target="_blank" class="btn">View Poster Presented at UCLA Biology Research Symposium</a>
 							</div>
 							<!-- poster end -->
 							
