--- a/portfolio/mp.html
+++ b/portfolio/mp.html
@@ -41,10 +41,10 @@
 			<nav>
 				<ul class="box-primary-nav">
 					<li class="box-label">Let's Chat!</li>
-						<li class="box-social"><a href="mailto:knkeeley@gmail.com" ><i class="ion-paper-airplane"></i></a></li>
-						<li class="box-social"><a href="https://www.linkedin.com/in/katenk/" target="_blank"><i class="ion-social-linkedin" target="_blank"></i></a></li>
+						<li class="box-social"><a href="mailto:kateberg00@gmail.com" ><i class="ion-paper-airplane"></i></a></li>
+						<li class="box-social"><a href="www.linkedin.com/in/katekeeleyberg" target="_blank"><i class="ion-social-linkedin" target="_blank"></i></a></li>
 						<li class="box-social"><a href="https://twitter.com/pokateo_" target="_blank"><i class="ion-social-twitter" target="_blank"></i></a></li>
-					<li class="box-label">Kate Keeley</li>
+					<li class="box-label">Kate Berg</li>
 					<li><a href="../resume.html">Resume</a></li>
 					<li><a href="../index.html#portfolio">Portfolio</a></li>
 					<table align="center">
@@ -134,7 +134,7 @@
 			
 			<table>
 				<tr>
-					<th><a href="https://www.slideshare.net/KateKeeley2/safposterfinal?ref=https://www.linkedin.com/in/katenk/detail/treasury/education:332019914/?entityUrn=urn%3Ali%3Afs_treasuryMedia%3A(ACoAABzc27kBobnPLXgP1m22hEKZNiK70Spv2SM%2C1479347485661)" target="_blank" >View Poster Presented at the Society of American Foresters Meeting</a></th>
+					<th><a href="https://www.slideshare.net/KateKeeley2/safposterfinal?ref=www.linkedin.com/in/katekeeleybergdetail/treasury/education:332019914/?entityUrn=urn%3Ali%3Afs_treasuryMedia%3A(ACoAABzc27kBobnPLXgP1m22hEKZNiK70Spv2SM%2C1479347485661)" target="_blank" >View Poster Presented at the Society of American Foresters Meeting</a></th>
 					<th><a href="https://greatlakeslcc.org/project/supporting-conservation-and-decision-making-northwoods-mapping-forest-values-services-and" target="_blank" >View Website</a></th>
 					<th><a href="https://www.sciencebase.gov/catalog/item/590c8840e4b0e541a038e2db" target="_blank">Visit Website</a></th>
 				</tr>
@@ -153,8 +153,8 @@
      <footer>
         <div class="container-fluid">
             <h5 align="center"><a href="../index.html#portfolio">Portfolio</a> &#8226; <a href="../resume.html">Resume</a></h5>
-				<h5><a href="mailto:knkeeley@gmail.com"><i class="ion-paper-airplane"></i></a>  
-				<a href="https://www.linkedin.com/in/katenk/" target="_blank"><i class="ion-social-linkedin"></i></a>  
+				<h5><a href="mailto:kateberg00@gmail.com"><i class="ion-paper-airplane"></i></a>  
+				<a href="www.linkedin.com/in/katekeeleyberg" target="_blank"><i class="ion-social-linkedin"></i></a>  
 				<a href="https://twitter.com/pokateo_" target="_blank"><i class="ion-social-twitter"></i></a></h5>
 		</div>
     </footer>
