--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Kate Keeley's Portfolio</title>
+    <title>Kate Berg's Portfolio</title>
     <link rel="icon" href="img/fav.png" type="image/x-icon">
 
     <!-- Bootstrap -->
@@ -52,10 +52,10 @@
 			<nav>
 				<ul class="box-primary-nav">
 					<li class="box-label">Let's Chat!</li>
-						<li class="box-social"><a href="mailto:knkeeley@gmail.com" ><i class="ion-paper-airplane"></i></a></li>
-						<li class="box-social"><a href="https://www.linkedin.com/in/katenk/" target="_blank"><i class="ion-social-linkedin" target="_blank"></i></a></li>
+						<li class="box-social"><a href="mailto:kateberg00@gmail.com" ><i class="ion-paper-airplane"></i></a></li>
+						<li class="box-social"><a href="www.linkedin.com/in/katekeeleyberg" target="_blank"><i class="ion-social-linkedin" target="_blank"></i></a></li>
 						<li class="box-social"><a href="https://twitter.com/pokateo_" target="_blank"><i class="ion-social-twitter" target="_blank"></i></a></li>
-					<li class="box-label">Kate Keeley</li>
+					<li class="box-label">Kate Berg</li>
 					<li><a href="../resume.html">Resume</a></li>
 					<li><a href="../index.html#portfolio">Portfolio </a><i class="ion-ios-circle-filled color"></i></li>
 					<table align="center">
@@ -531,8 +531,8 @@
      <footer>
         <div class="container-fluid">
             <h5 align="center"><a href="#portfolio">Portfolio</a> &#8226; <a href="resume.html">Resume</a></h5>
-				<h5><a href="mailto:knkeeley@gmail.com"><i class="ion-paper-airplane"></i></a>  
-				<a href="https://www.linkedin.com/in/katenk/" target="_blank"><i class="ion-social-linkedin"></i></a>  
+				<h5><a href="mailto:kateberg00@gmail.com"><i class="ion-paper-airplane"></i></a>  
+				<a href="www.linkedin.com/in/katekeeleyberg" target="_blank"><i class="ion-social-linkedin"></i></a>  
 				<a href="https://twitter.com/pokateo_" target="_blank"><i class="ion-social-twitter"></i></a></h5>
 		</div>
     </footer>
