--- a/old/contact.html
+++ b/old/contact.html
@@ -72,7 +72,7 @@
 
                 <!-- <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li> -->
-				<li class="box-social"><a href="https://www.linkedin.com/in/katenk/"><i class="ion-social-linkedin"></i></a></li>
+				<li class="box-social"><a href="www.linkedin.com/in/katekeeleyberg"><i class="ion-social-linkedin"></i></a></li>
                 <li class="box-social"><a href="https://twitter.com/pokateo_"><i class="ion-social-twitter"></i></a></li>
                 <!-- <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li> -->
             </ul>
@@ -118,7 +118,7 @@
                         </div>
                     </div>
                     <div class="col-md-12">
-                        <a href="mailto:knkeeley@gmail.com" class="btn btn-box">Send</a>
+                        <a href="mailto:kateberg00@gmail.com" class="btn btn-box">Send</a>
                     </div>
                 </div>
             </form>
