--- a/old/index.html
+++ b/old/index.html
@@ -57,7 +57,7 @@
         <!-- nav -->
         <nav>
             <ul class="box-primary-nav">
-                <li class="box-label">Kate Keeley</li>
+                <li class="box-label">Kate Berg</li>
 
                 <li><a href="index.html">Home</a> <i class="ion-ios-circle-filled color"></i></li>
                 <li><a href="about.html">Resume</a></li>
