--- a/resume.html
+++ b/resume.html
@@ -74,10 +74,10 @@
 			<nav>
 				<ul class="box-primary-nav">
 					<li class="box-label">Let's Chat!</li>
-						<li class="box-social"><a href="mailto:knkeeley@gmail.com" ><i class="ion-paper-airplane"></i></a></li>
-						<li class="box-social"><a href="https://www.linkedin.com/in/katenk/" target="_blank"><i class="ion-social-linkedin" target="_blank"></i></a></li>
+						<li class="box-social"><a href="mailto:kateberg00@gmail.com" ><i class="ion-paper-airplane"></i></a></li>
+						<li class="box-social"><a href="www.linkedin.com/in/katekeeleyberg" target="_blank"><i class="ion-social-linkedin" target="_blank"></i></a></li>
 						<li class="box-social"><a href="https://twitter.com/pokateo_" target="_blank"><i class="ion-social-twitter" target="_blank"></i></a></li>
-					<li class="box-label">Kate Keeley</li>
+					<li class="box-label">Kate Berg</li>
 					<li><a href="../resume.html">Resume </a><i class="ion-ios-circle-filled color"></i></li>
 					<li><a href="../index.html#portfolio">Portfolio</a></li>
 					<table align="center">
@@ -132,7 +132,7 @@
 	<!-- Introduction -->
 	<section id="about" class="about-section section-padding">
 		<div class="container">
-			<h2 class="section-title wow fadeInUp">Kate Keeley</h2> 
+			<h2 class="section-title wow fadeInUp">Kate Berg</h2> 
 			<div class="row">
 				<div class="col-md-4 col-md-push-8">
 					<div class="biography">
@@ -650,8 +650,8 @@
     <footer>
         <div class="container-fluid">
             <h5 align="center"><a href="index.html#portfolio">Portfolio</a> &#8226; <a href="#top">Resume</a></h5><p>View Section: <a href="#edu">Education</a> | <a href="#exp">Experience</a> | <a href="#skills">Skills</a> | <a href="#cert">Honors and Certificates</a>
-			<br><a href="mailto:knkeeley@gmail.com"><i class="ion-paper-airplane"></i></a>  
-				<a href="https://www.linkedin.com/in/katenk/" target="_blank"><i class="ion-social-linkedin"></i></a>  
+			<br><a href="mailto:kateberg00@gmail.com"><i class="ion-paper-airplane"></i></a>  
+				<a href="www.linkedin.com/in/katekeeleyberg" target="_blank"><i class="ion-social-linkedin"></i></a>  
 				<a href="https://twitter.com/pokateo_" target="_blank"><i class="ion-social-twitter"></i></a></p>
 		</div>
     </footer>
